deploy/my-django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-django-service
spec:
  selector:
    app: my-django
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 31090
    protocol: TCP
  # type: LoadBalancer
  type: NodePort # NodePort方式
  # type: ClusterIP
