deploy/my-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  # namespace: default
spec:
  rules:
  - host: wwww.webaaa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-django-service
            port: 
              number: 80
